# zkPokerdot

./: .gitignore
circuits/: package-lock.json
game/: jian.md
game/sources/: room.move  test.move
game/tests/: test_tests.move
my-gen-prove/: Cargo.toml
my-gen-prove/src/: main.rs
ui/: package.json
