[package]
name = "my-gen-prove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-circom = "0.1.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
rand = "0.8.5"
# sui-sdk = "0.0.0"
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
base64 = "0.13.0"
hex="*"
serde_json = "1.0.117"
serde = "1.0.203"
num-bigint = "0.4.3"
